Add ng-file-upload library.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -73,6 +73,10 @@
         <script>
             window.hubspotBase = '{{ hubspotBase }}';
             window.googleMapsJavascriptApiV3Key = '{{ googleMapsJavascriptApiV3Key }}';
+            window.FileAPI = {
+                jsUrl: '/dist/ng-file-upload/FileAPI.min.js',
+                flashUrl: '/dist/ng-file-upload/FileAPI.flash.swf'
+            };
         </script>
 
         <script src="/dist/js/built.js"></script>
