--- a/src/web/templates/admin/edit-packages.html
+++ b/src/web/templates/admin/edit-packages.html
@@ -9,6 +9,7 @@
                 <th>Is meal plan?</th>
                 <th>Packaging type</th>
                 <th>Can deliver cutlery and serviettes?</th>
+                <th>Notice required</th>
                 <th>Save</th>
             </tr>
         </thead>
@@ -30,6 +31,11 @@
                 </td>
                 <td>
                     <input type="checkbox" ng-model="package.canDeliverCutleryAndServiettes" ng-change="package.hasChanged = true" />
+                </td>
+                <td>
+                    <select ng-options="option.value as option.label for option in noticeOptions"
+                        ng-model="package.notice"
+                        ng-change="package.hasChanged = true"></select>
                 </td>
                 <td>
                     <button ng-click="save(package)" ng-show="package.hasChanged">Save</button>
