Edit packages page: let event types be edited.

--- a/src/web/templates/admin/edit-packages.html
+++ b/src/web/templates/admin/edit-packages.html
@@ -11,6 +11,7 @@
                 <th>Can deliver cutlery and serviettes?</th>
                 <th>Notice required</th>
                 <th>Cuisine type</th>
+                <th>Event types</th>
                 <th>Save</th>
             </tr>
         </thead>
@@ -42,6 +43,13 @@
                     <select ng-options="cuisine.id as cuisine.name for cuisine in cuisineTypes"
                         ng-model="package.cuisineTypeId"
                         ng-change="package.hasChanged = true"></select>
+                </td>
+                <td>
+                    <select ng-options="event.id as event.name for event in eventTypes"
+                        ng-model="package.eventTypeIds"
+                        ng-change="package.hasChanged = true"
+                        multiple
+                        size="6"></select>
                 </td>
                 <td>
                     <button ng-click="save(package)" ng-show="package.hasChanged">Save</button>
