--- a/src/web/templates/customer/orders.html
+++ b/src/web/templates/customer/orders.html
@@ -109,6 +109,10 @@
                                 <td class="order-details-cell" id="special_delivery_instructions">{{ modalOrder.deliveryInstruction }}</td>
                             </tr>
                             <tr>
+                                <th scope="row">Parking suggestion</th>
+                                <td class="order-details-cell" id="parking_suggestion">{{ modalOrder.parkingSuggestion }}</td>
+                            </tr>
+                            <tr>
                                 <th scope="row">Status</th>
                                 <td class="order-details-cell" id="status">{{ modalOrder.statusText | getOrderStatusText }}</td>
                             </tr>
