Changes based on feedback.

--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -180,7 +180,7 @@
 
             <div class="form-group">
                 <label for="refund_reason">Reason for refund</label>
-                <textarea class="form-control input-lg" id="refund_reason" name="refundReason" rows="3" ng-model="order.refundReason"></textarea>
+                <textarea class="form-control input-lg" id="refund_reason" name="refundReason" rows="3" ng-model="refundReason"></textarea>
             </div>
 
             <input class="btn btn-primary" type="submit" value="Refund" />
