Add account overview page, CSS styling and add separator argument for address formatter.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -989,6 +989,7 @@
 
 @import 'directives/cp-package-card.scss';
 @import 'admin/general.scss';
+@import 'customer/account-details.scss';
 @import 'customer/search.scss';
 @import 'customer/view-package.scss';
 @import 'vendor/delivery-radiuses.scss';
