--- a/src/web/scss/links.scss
+++ b/src/web/scss/links.scss
@@ -7,3 +7,9 @@ a[ng-click] {
     font-weight: bold;
     letter-spacing: 1px;
 }
+
+.link-account {
+    color: #f15a24;
+    font-weight: bold;
+    font-size: 0.9em;
+}
