--- a/app/Resources/views/default-layout/footer.html.twig
+++ b/app/Resources/views/default-layout/footer.html.twig
@@ -1,82 +1,3 @@
-<footer class="content-info" role="contentinfo">
-    <div class="container">
-        <section class="content-info-links">
-            <div class="row">
-                <div class="col-sm-5 newsletter" ng-controller="NewsletterController as newsletter">
-                    <h3>Get £25 off your first order</h3>
-
-                    <form class="newsletter-form" role="form" ng-submit="newsletter.subscribe()" ng-show="!newsletter.success">
-                        <p>Sign up to our email for a weekly dose of catered inspiration and £25 off your first order.</p>
-
-                        <div class="form-group">
-                            <label class="sr-only" for="email">Email</label>
-                            <input class="form-control input-lg" name="email" type="email" placeholder="Email address" ng-model="newsletter.email" />
-                        </div>
-
-                        <input class="btn btn-primary btn-lg" type="submit" value="Sign up to weekly email" />
-                    </form>
-
-                    <p ng-show="newsletter.success">
-                        You have been subscribed and a £25 voucher has been emailed to you.
-                    </p>
-                </div>
-
-                <div class="col-sm-3 col-sm-push-1">
-                    <h3>Company</h3>
-                    <ul>
-                        <li><a href="{{ hubspotBase }}/about">About</a></li>
-                        <li><a href="{{ hubspotBase }}/faq"><abbr>FAQ</abbr></a></li>
-                        <li><a href="/vendors">Meet the vendors</a></li>
-
-                        <li class="dropdown">
-                            <a id="areas" href="#" role="button" data-toggle="dropdown">Areas we serve <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="areas">
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-bloomsbury" role="menuitem">Office catering in Bloomsbury, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-camden" role="menuitem">Office catering in Camden, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-canary-wharf" role="menuitem">Office catering in Canary Wharf, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-clerkenwell" role="menuitem">Office catering in Clerkenwell, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-covent-garden" role="menuitem">Office catering in Covent Garden, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-farringdon" role="menuitem">Office catering in Farringdon, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-hoxton" role="menuitem">Office catering in Hoxton, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-islington" role="menuitem">Office catering in Islington, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-kings-cross" role="menuitem">Office catering in Kings Cross, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-liverpool-street" role="menuitem">Office catering in Liverpool Street, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-london" role="menuitem">Office catering in London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-mayfair" role="menuitem">Office catering in Mayfair, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-moorgate" role="menuitem">Office catering in Moorgate, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-old-street" role="menuitem">Office catering in Old Street, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-shoreditch" role="menuitem">Office catering in Shoreditch, London</a></li>
-                                <li role="presentation"><a tabindex="-1" href="/london/office-catering-soho" role="menuitem">Office catering in Soho, London</a></li>
-                            </ul>
-                        </li>
-
-                        <li><a href="/vendor/signup">Sell food with us</a></li>
-                        <li><a href="{{ hubspotBase }}/contact">Contact</a></li>
-                        <li><a href="{{ hubspotBase }}/privacy">Privacy</a></li>
-                        <li><a href="{{ hubspotBase }}/terms">Terms</a></li>
-                    </ul>
-                </div>
-                <div class="col-sm-3 col-sm-push-1">
-                    <h3>Services</h3>
-
-                    <ul>
-                        <li><a href="{{ hubspotBase }}/event-catering">Event catering</a></li>
-                        <li><a href="{{ hubspotBase }}/team-lunch">Team lunch</a></li>
-                        <li><a href="{{ hubspotBase }}/office-managers">For office managers</a></li>
-                    </ul>
-
-                    <h3>Connect</h3>
-
-                    <ul>
-                        <li><a href="{{ blogUrl }}" target="_blank">Blog</a></li>
-                        <li class="facebook"><a href="https://www.facebook.com/citypantry" target="_blank" rel="me">Facebook</a></li>
-                        <li class="twitter"><a href="https://twitter.com/citypantry" target="_blank" rel="me">Twitter</a></li>
-                        <li class="instagram"><a href="http://instagram.com/citypantry" target="_blank" rel="me">Instagram</a></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <p class="content-info-copyright">Copyright &#169; {{ "now"|date("Y") }} City Pantry</p>
-    </div>
+<footer role="contentinfo">
+    Copyright &#169; {{ "now" | date("Y") }} City Pantry
 </footer>
