--- a/src/web/scss/footer.scss
+++ b/src/web/scss/footer.scss
@@ -1,3 +1,4 @@
-footer li.dropdown:hover ul.dropdown-menu {
-    display: block;
+body > footer {
+    text-align: center;
+    padding-bottom: 1rem;
 }
