--- a/src/web/templates/auth/login-register.html
+++ b/src/web/templates/auth/login-register.html
@@ -4,7 +4,7 @@
             <div class="island login">
                 <h2>Log in with a City Pantry account</h2>
 
-                <p class="error" ng-show="loginError" ng-bind="loginError"></p>
+                <p class="form-error" ng-show="loginError" ng-bind="loginError"></p>
 
                 <form ng-submit="login()" class="login">
                     <fieldset>
@@ -36,7 +36,7 @@
             <div class="island-alt signup">
                 <h2>New to City Pantry? Sign up!</h2>
 
-                <p class="error" ng-show="registerError" ng-bind="registerError"></p>
+                <p class="form-error" ng-show="registerError" ng-bind="registerError"></p>
 
                 <form ng-submit="register()" class="register">
                     <fieldset>
