Fix 'edit address' pages.

--- a/src/web/templates/customer/addresses.html
+++ b/src/web/templates/customer/addresses.html
@@ -27,7 +27,7 @@
                 <td>{{ address.companyName }}</td>
                 <td>{{ address.officeManagerName }}</td>
                 <td>{{ address.landlineNumber }}</td>
-                <td><a class="btn btn-primary" ng-href="/customer/addresses/{{ address.id }}">Edit</a></td>
+                <td><a class="btn btn-primary cp-edit-address" ng-href="/customer/addresses/{{ address.id }}">Edit</a></td>
             </tr>
         </tbody>
     </table>
