--- a/src/web/templates/general/customer-nav-menu-items.html
+++ b/src/web/templates/general/customer-nav-menu-items.html
@@ -1,20 +1,20 @@
-<li><a href="/quote">Event quote</a></li>
-<li><a href="{{ hubspotBase }}/faq">FAQ</a></li>
+<li><a href="/customer/dashboard">Dashboard</a></li>
 <li class="dropdown" dropdown>
     <a href="#" class="cp-button-my-account" dropdown-toggle role="button" aria-expanded="false">
-        My account <span class="caret"></span>
+        My Account <span class="caret"></span>
     </a>
     <ul class="cp-nav-menu-my-account" role="menu">
+        <li><a href="/customer/account-details">Account Details</a></li>
         <li><a href="/customer/orders">Orders</a></li>
         <li><a href="/customer/addresses">Addresses</a></li>
         <li><a href="/user/payment-cards">Cards</a></li>
-        <li><a href="/customer/account">My details</a></li>
-        <li><a href="/logout">Log out</a></li>
+        <li><a href="/customer/account">My Details</a></li> <!-- @todo - remove? -->
+        <li><a href="/logout">Log Out</a></li>
     </ul>
 </li>
 <li>
     <a class="cp-call-us" href="tel:{{ phoneNumberInternational }}">
-        <div class="cp-call-us-message">Any questions? Call us:</div>
+        <img src="/dist/images/icons/telephone.svg" width="33" height="27" />
         <div class="cp-call-us-number">{{ phoneNumberUk }}</div>
     </a>
 </li>
