--- a/src/web/templates/general/default-nav-menu-items.html
+++ b/src/web/templates/general/default-nav-menu-items.html
@@ -1,9 +1,9 @@
-<li><a href="/login">Log in / Sign up</a></li>
+<li><a href="/login">Log In / Sign Up</a></li>
 <li><a href="{{ hubspotBase }}/faq">FAQ</a></li>
-<li><a href="/quote">Event quote</a></li>
+<li><a href="/quote">Event Quote</a></li>
 <li>
     <a class="cp-call-us" href="tel:{{ phoneNumberInternational }}">
-        <div class="cp-call-us-message">Any questions? Call us:</div>
+        <img src="/dist/images/icons/telephone.svg" width="33" height="27" />
         <div class="cp-call-us-number">{{ phoneNumberUk }}</div>
     </a>
 </li>
