--- a/src/web/templates/general/staff-nav-menu-items.html
+++ b/src/web/templates/general/staff-nav-menu-items.html
@@ -7,12 +7,12 @@
 <li><a href="/admin/users">Users</a></li>
 <li class="dropdown" dropdown>
     <a href="#" class="cp-button-my-account" dropdown-toggle role="button" aria-expanded="false">
-        My account <span class="caret"></span>
+        My Account <span class="caret"></span>
     </a>
     <ul class="cp-nav-menu-my-account" role="menu">
-        <li><a href="/admin/vendors/edit">Edit vendors</a></li>
-        <li><a href="/admin/packages/edit">Edit packages</a></li>
-        <li><a href="/customer/account">My details</a></li>
-        <li><a href="/logout">Log out</a></li>
+        <li><a href="/admin/vendors/edit">Edit Vendors</a></li>
+        <li><a href="/admin/packages/edit">Edit Packages</a></li>
+        <li><a href="/customer/account">My Details</a></li>
+        <li><a href="/logout">Log Out</a></li>
     </ul>
 </li>
