--- a/src/web/templates/customer/addresses.html
+++ b/src/web/templates/customer/addresses.html
@@ -1,7 +1,5 @@
-<div class="vendor-signup-header"></div>
-
 <div class="wrapper">
-    <h1>Delivery addresses</h1>
+    <h1 class="cp-heading">Delivery addresses</h1>
 
     <p>
         <a href="/customer/addresses/new" role="button" class="btn btn-primary btn-lg">Add a new address</a>
