--- a/src/web/scss/links.scss
+++ b/src/web/scss/links.scss
@@ -1,3 +1,9 @@
 a[ng-click] {
     cursor: pointer;
 }
+
+.btn-primary {
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
