--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -7,6 +7,7 @@
 @import '../lib/angular-ui-carousel.scss';
 
 @import 'directives/cp-header';
+@import 'directives/cp-address-form';
 @import 'partials/cp-search';
 @import 'partials/cp-header';
 
@@ -120,6 +121,10 @@
     margin: 0 auto;
     max-width: $screen-lg;
     padding: 0 $grid-gutter-width $grid-gutter-width $grid-gutter-width;
+}
+.thin-wrapper {
+    width: 630px;
+    margin: 0 auto;
 }
 // Wide wrapper used in admin pages.
 .wide-wrapper {
