--- a/src/web/templates/customer/address.html
+++ b/src/web/templates/customer/address.html
@@ -1,8 +1,6 @@
-<div class="vendor-signup-header"></div>
-
-<div class="wrapper">
-    <h1 ng-if="isNew">Add a new address</h1>
-    <h1 ng-if="!isNew">Edit address</h1>
+<div class="thin-wrapper">
+    <h1 ng-if="isNew" class="cp-heading">Add a delivery address</h1>
+    <h1 ng-if="!isNew" class="cp-heading">Delivery address</h1>
 
     <cp-address-form ng-if="address" address="address" user-type="'customer'"
         ></cp-address-form>
