--- a/src/web/scss/modules/_cp-bootstrap-variables.scss
+++ b/src/web/scss/modules/_cp-bootstrap-variables.scss
@@ -12,6 +12,7 @@ $border-radius-base: 0;
 $border-radius-small: 0;
 
 $font-size-h2: 20px;
+$font-size-base: 12px;
 
 // Bootstrap typography
 $font-family-base: proxima-nova, 'helvetica neue', helvetica, sans-serif;
